--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -250,12 +250,14 @@ body{
 .ico_rotateLeft{background-image: url('../resources/icon/rotateLeft.png') !important;}
 .ico_rotateRight{background-image: url('../resources/icon/rotateRight.png') !important;}
 .ico_doc16 {background-image: url('../resources/icon/doc16.png') !important;}
-.ico_doc32 {background-image: url('../resources/icon/doc32.png') !important;}
+.ico_doc32 {background-image: url('../resources/icon/doc-32.png') !important;}
 .ico_add {background-image: url('../resources/icon/add.png') !important;}
 .ico_back {background-image: url('../resources/icon/back.png') !important;}
 .ico_run {background-image: url('../resources/icon/run.png') !important;}
 .ico_refresh {background-image: url('../resources/icon/refresh.png') !important;}
 .ico_execute {background-image: url('../resources/icon/execute.png') !important;}
+.ico_enter20 {background-image: url('../resources/icon/enter-20.png') !important;}
+.ico_exit20 {background-image: url('../resources/icon/exit-20.png') !important;}
 .ico_sign {background-image: url('../resources/icon/sign.png') !important;}
 .ico_16_inspector{background-image: url('../resources/icon/inspector.png') !important;}
 .ico_outdoc{background-image: url('../resources/icon/outdoc.png') !important;}
