--- a/escom-bpm-web/src/main/webapp/view/processes/templ/load-from-templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/load-from-templ-dlg.xhtml
@@ -4,7 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">                
 
-    <p:dialog header="#{bundle.LoadFromTemlate}" width="500" height="300" position="center" modal="true" 
+    <p:dialog header="#{bundle.LoadSchemeFromTemlate}" width="500" height="300" position="center" modal="true" 
               closeOnEscape="true" resizable="true" widgetVar="LoadFromTemplDLG">
         <h:form id="LoadFromTemplFRM">
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
@@ -12,7 +12,7 @@
                     <p:autoUpdate />
                 </p:messages>
                                 
-                <p:outputLabel value="#{bundle.Select}:" indicateRequired="true"/>
+                <p:outputLabel value="#{bundle.SelectingProcessTemplate}:" indicateRequired="true"/>
                 <p:selectOneMenu value="#{processCardBean.selectedTempl}" title="#{bundle.ProcessTemplate}" 
                                  styleClass="ui-grid-col-12"
                                  rendered="true"
@@ -24,12 +24,17 @@
                 </p:selectOneMenu>
                 <p:spacer height="5"/>
                 <p:separator/>
-                <p:commandButton id="btnAction" style="float: right;"
-                                 value="#{bundle.Load}"
-                                 onclick="PF('LoadFromTemplDLG').hide();"
-                                 actionListener="#{processCardBean.onLoadModelFromTempl()}">
-                        <p:confirm header="#{msg.ProcessDiagramWillBeCleared}" message="#{bundle.AreYouSure}" icon="ui-icon-alert"/>
-                </p:commandButton>
+                <h:panelGroup>
+                    <p:commandButton style="float: right;"
+                                     value="#{bundle.Cancel}"
+                                     onclick="PF('LoadFromTemplDLG').hide();">      
+                    </p:commandButton>
+                    <p:commandButton id="btnAction" style="float: right;"
+                                     value="#{bundle.Load}"
+                                     onclick="PF('LoadFromTemplDLG').hide();"
+                                     actionListener="#{processCardBean.onLoadModelFromTempl()}">
+                    </p:commandButton>
+                </h:panelGroup>
             </p:panelGrid>
         </h:form>
     </p:dialog>
