--- a/escom-bpm-web/src/main/webapp/view/processes/templ/load-from-templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/load-from-templ-dlg.xhtml
@@ -10,12 +10,12 @@
             <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
                 <p:messages showDetail="false" closable="true" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
                     <p:autoUpdate />
-                </p:messages>
-                                
+                </p:messages>                
+                
                 <p:outputLabel value="#{bundle.SelectingProcessTemplate}:" indicateRequired="true"/>
                 <p:selectOneMenu value="#{processCardBean.selectedTempl}" title="#{bundle.ProcessTemplate}" 
                                  styleClass="ui-grid-col-12"
-                                 rendered="true"
+                                 required="true"
                                  requiredMessage="#{bundle.Field} [#{bundle.ProcessTemplate}] #{bundle.MustBeFilled}"
                                  valueChangeListener="#{processCardBean.onTemplSelector}" converter="procTemplConverter"
                                  filter="true" filterMatchMode="startsWith">
@@ -26,7 +26,7 @@
                 <p:separator/>
                 <h:panelGroup>
                     <p:commandButton style="float: right;"
-                                     value="#{bundle.Cancel}"
+                                     value="#{bundle.Cancel}" immediate="true"
                                      onclick="PF('LoadFromTemplDLG').hide();">      
                     </p:commandButton>
                     <p:commandButton id="btnAction" style="float: right;"
