--- a/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/templ/proctempl-explorer.xhtml
@@ -7,7 +7,7 @@
     <!-- стандарный обозреватель/селектор -->
 
     <ui:param name="_explorerBean" value="#{explorerTreeBean}" />
-    <ui:param name="_treeBean" value="#{processTypesTemplBean}" />
+    <ui:param name="_treeBean" value="#{processTypesBean}" />
     <ui:param name="_detailBean"  value="#{procTemplBean}"/>
     <ui:param name="_searcheBean" value="#{procTemplBean}"/>
     
